--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,8 +14,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerInParent="true"
-        android:layout_centerHorizontal="false"
-        app:srcCompat="@drawable/logo" />
+        android:layout_centerHorizontal="false"/>
 
     <TextView
         android:id="@+id/textView"
